--- a/Resources/3.4 Birthday Invite Project/index.html
+++ b/Resources/3.4 Birthday Invite Project/index.html
@@ -1,5 +1,18 @@
-<!-- Example image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg
+<h1>IT'S MY BIRTHDAY!</h1>
 
-<!-- Example Google Maps Link -->
-https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656
+<img src="https://media.istockphoto.com/id/918933880/photo/birthday-cake-on-a-table.jpg?s=612x612&w=0&k=20&c=pV3vReuTK2x4soVzHTj2hAfhVMbK0pZfNpjEeXo3ges=" alt="birthday-cake-on-a-table">
+
+<p>Hello friend!</p>
+<p>I invite you to my birthday party on the 21st of February 2025</p>
+
+<h2>What to bring:</h2>
+<ul>
+    <li>Yourself</li>
+    <li>Your partner</li>
+    <li>A toy for my dog</li>
+    <li>Good mood</li>
+</ul>
+
+<h2>Where to meet</h2>
+
+<a href="https://www.google.co.uk/maps/place/El+Pl%C3%A1tano+Gordo+(%C3%A1rbol+singular)/@40.4187651,-3.7340208,18z/data=!4m14!1m7!3m6!1s0xd42280f1301ea9b:0xa23ef0ad9eadd814!2sCasa+de+Campo+Lake!8m2!3d40.4189281!4d-3.7327191!16s%2Fg%2F1hb_h9njn!3m5!1s0xd42280f9afeb90d:0xdc92d2521d8ec79!8m2!3d40.4200716!4d-3.7326282!16s%2Fg%2F11cssmsl_8?entry=ttu">Google Maps</a>
