--- a/Projects/Capstone Project 1/index.html
+++ b/Projects/Capstone Project 1/index.html
@@ -40,7 +40,6 @@
             <h3>Master of Science in Computing</h3>
             <p>Edinburgh Napier University</p>
             <p>September 2022 - September 2023</p>
-            <p></p>
             <h4>Modules included:</h4>
             <ul>
                 <li>Software Development 1</li>
@@ -52,6 +51,8 @@
                 <li>Computer Systems</li>
             </ul>
         </li>
+
+        <hr>
 
         <li>
             <h3>Software Engineering Bootcamp</h3>
@@ -69,6 +70,8 @@
                 development lifecycle.
             </p>
         </li>
+
+        <hr>
 
         <li>
             <h3>Chartered Management Accountant</h3>
@@ -92,6 +95,8 @@
                 <li>E2 Managing Performance</li>
             </ul>
         </li>
+
+        <hr>
 
         <li>
             <h3>Ba (Hons) Business Management with Finance</h3>
@@ -150,10 +155,12 @@
 
     <hr>
 
+    <a href="./public/contact-me.html">Contact Me</a>
+
     <footer>
-        <a href="./public/contact-me.html">Contact Me</a>
+        
         <p>
-            Copyright @ Jozsef Simon - All rights reserved
+            © Jozsef Simon - All rights reserved.
         </p>
     </footer>
 
