--- a/Resources/7.3 CSS Flag Project/index.html
+++ b/Resources/7.3 CSS Flag Project/index.html
@@ -6,7 +6,42 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    .flag{
+      background-color: rgb(206, 17, 38);
+      width: 900px;
+      height: 600px;
+      position: relative;
+    }
+
+    p{
+      font-size: 5rem;
+      margin: 0;
+      text-align: center;
+    }
+
+    .flag > p{
+      color: white;
+    }
+
+    /* Blue line in flag */
+    .flag > div{
+      background-color: rgb(0, 40, 104);
+      width: 100%;
+      height: 300px;
+      position: absolute;
+      top: 150px;
+    }
+
+    /* White circle in the middle of flag */
+    .flag > div > div{
+      background-color: white;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      position: relative;
+      left: 350px;
+      top: 50px;
+    }
   </style>
 </head>
 
