--- a/Resources/10.2 Grid Placement/exercise1.html
+++ b/Resources/10.2 Grid Placement/exercise1.html
@@ -27,16 +27,40 @@
       /* TODO: Use Flexbox to align the text to the center horizontally and vertically. 
       See goal1 image.
       */
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+
+    .cowboy {
+      background-color: blue;
+      grid-column: span 2;
+    }
+
+    .astronaut {
+      /* order: 1;
+      grid-column: span 2; */
+      /* grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 2;
+      grid-row-end: 3; */
+      grid-area: 2 / 1 / 3 / 3;
+    }
+
+    .book {
+      /* grid-row: span 2; */
+      grid-area: 1 / 3 / 3 / 4;
+    }
+
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="item cowboy">🤠</div>
-    <div class="item astronaut">👨‍🚀</div>
-    <div class="item book">📖</div>
-  </div>
+    <div class="container">
+      <div class="item cowboy">🤠</div>
+      <div class="item astronaut">👨‍🚀</div>
+      <div class="item book">📖</div>
+    </div>
 </body>
 
 </html>
